# aliyundrive-webdav

./: .bumpversion.cfg  .codespellrc  .gitattributes  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  pyproject.toml  systemd.service  阿里
.builds/: freebsd.yml
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: CI.yml  Release.yml
backend/: Cargo.toml  Dockerfile  app.py  fly.toml  refresh_token.py  requirements.txt
backend/src/: main.rs
merlin/: .gitignore  build.py  config.json.js
merlin/aliyundrivewebdav/: install.sh
merlin/aliyundrivewebdav/res/: aliyundrivewebdav_check.html
merlin/aliyundrivewebdav/scripts/: aliyundrivewebdav_config.sh  uninstall_aliyundrivewebdav.sh
merlin/aliyundrivewebdav/webs/: Module_aliyundrivewebdav.asp
merlin/arm380/: install.sh
merlin/arm380/scripts/: aliyundrivewebdav_config.sh  uninstall_aliyundrivewebdav.sh
merlin/arm380/webs/: Module_aliyundrivewebdav.asp
merlin/arm384/: .valid  install.sh  uninstall.sh
merlin/arm384/res/: aliyundrivewebdav-menu.js  aliyundrivewebdav.css
merlin/arm384/scripts/: aliyundrivewebdav_config.sh  aliyundrivewebdav_status.sh  aliyundrivewebdavconfig.sh
merlin/arm384/webs/: Module_aliyundrivewebdav.asp
openwrt/: Makefile
openwrt/aliyundrive-webdav/: Makefile
openwrt/aliyundrive-webdav/files/: aliyundrive-webdav.config  aliyundrive-webdav.init
openwrt/aliyundrive-webdav/root/etc/config/: aliyundrive-webdav
openwrt/aliyundrive-webdav/root/etc/init.d/: aliyundrive-webdav
openwrt/luci-app-aliyundrive-webdav/: Makefile
openwrt/luci-app-aliyundrive-webdav/luasrc/controller/: aliyundrive-webdav.lua
openwrt/luci-app-aliyundrive-webdav/luasrc/model/cbi/: aliyundrive-webdav.lua
openwrt/luci-app-aliyundrive-webdav/luasrc/model/cbi/aliyundrive-webdav/: client.lua  log.lua
openwrt/luci-app-aliyundrive-webdav/luasrc/view/aliyundrive-webdav/: aliyundrive-webdav_qrcode.htm  aliyundrive-webdav_status.htm  log.htm  status.htm
openwrt/luci-app-aliyundrive-webdav/po/zh-cn/: aliyundrive-webdav.po
openwrt/root/etc/config/: aliyundrive-webdav
openwrt/root/etc/init.d/: aliyundrive-webdav
snap/: snapcraft.yaml
src/: aliyundrive.rs  cache.rs  drive.rs  gui.rs  main.rs  vfs.rs  webdav.rs
src/drive/: mod.rs  model.rs
src/login/: mod.rs  model.rs
