[package]
name = "aliyundrive-webdav"
version = "1.10.1"
edition = "2021"
description = "WebDAV server for AliyunDrive"
license = "MIT"
homepage = "https://github.com/messense/aliyundrive-webdav"
repository = "https://github.com/messense/aliyundrive-webdav.git"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.59"
bytes = "1.2.1"
clap = { version = "3.2.2", features = ["derive", "env", "wrap_help", "unstable-v4"] }
dashmap = "5.3.2"
dav-server = { version = "0.5.0", default-features = false, features = ["hyper"] }
dirs = "4.0.0"
futures-util = "0.3"
headers = "0.3.6"
hyper = { version = "0.14.18", features = ["server", "http2"] }
moka = { version = "0.9.2", default-features = false, features = ["future"] }
openssl-probe = { version = "0.1.4", optional = true }
path-slash = "0.2.0"
reqwest = { version = "0.11.7", default-features = false, features = ["json", "gzip", "cookies", "socks"] }
reqwest-middleware = "0.1.6"
reqwest-retry = "0.1.5"
serde = { version = "1.0.141", features = ["derive"] }
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1.17.0", features = ["rt-multi-thread", "io-util", "net", "time", "sync", "macros", "parking_lot", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
url = "2.2.2"
zip = { version = "0.6.2", default-features = false }
base64 = "0.13.0"
serde_json = "1.0.81"
atty = "0.2.14"
qr2term = "0.3.0"
self_update = { version = "0.30.0", default-features = false, features = ["archive-zip", "archive-tar", "compression-flate2", "compression-zip-deflate"] }

# TLS server support
rustls-pemfile = { version = "1.0.0", optional = true }
tls-listener = { version = "0.5.1", features = ["hyper-h1", "hyper-h2", "rt"], optional = true }
tokio-rustls = { version = "0.23.2", optional = true }

# Unix signal support
[target.'cfg(unix)'.dependencies]
signal-hook = "0.3.14"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }

[features]
default = ["rustls-tls", "atomic64"]
rustls-tls = ["reqwest/rustls-tls", "rustls-pemfile", "tls-listener/rustls", "hyper/stream", "tokio-rustls", "self_update/rustls"]
native-tls = ["reqwest/native-tls"]
native-tls-vendored = ["reqwest/native-tls-vendored", "openssl-probe"]
atomic64 = ["moka/atomic64"]

[profile.release]
lto = true

[package.metadata.deb]
maintainer = "messense <messense@icloud.com>"
copyright = "2021-present, messense <messense@icloud.com>"
license-file = ["LICENSE", "4"]
extended-description = """\
WebDAV server for AliyunDrive"""
section = "utility"
priority = "optional"
assets = [
    ["target/release/aliyundrive-webdav", "usr/bin/", "755"],
    ["systemd.service", "etc/systemd/system/aliyundrive-webdav.service", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/aliyundrive-webdav", dest = "/usr/bin/aliyundrive-webdav", mode = "0755" },
    { source = "LICENSE", dest = "/usr/share/doc/aliyundrive-webdav/LICENSE", doc = true, mode = "0644" },
    { source = "systemd.service", dest = "/etc/systemd/system/aliyundrive-webdav.service", config = true, mode = "0644" },
]
